--- a/stories/cognite.stories.mdx
+++ b/stories/cognite.stories.mdx
@@ -13,8 +13,9 @@ import {
   AllowControlledEditing,
   SplitContextAndViewer,
   CustomizedAnnotations,
-  Playground,
-  BoxAndArrows
+  AllowCustomDrawing,
+  BoxAndArrows,
+  Playground
 } from './cognite.stories.tsx';
 
 <Meta
@@ -169,6 +170,15 @@ You can drag all of the boxes around, but their positions will reset once the co
 
 It is a callback that allows you to access the `offsetX` and `offsetY` for the dragged arrow box, identified by the `annotationId` field. 
 You can store that value somewhere, and then pass it back to the `arrowPreviewOptions.customOffset[annotationId]` if you want to recreate it!
+
+## Custom drawing on a dedicated paint layer
+
+You can toggle the `drawable` flag and be allowed to draw on top of the shown file.
+
+<Canvas>
+  <Story story={AllowCustomDrawing} />
+</Canvas>
+
 
 ## Playground
 
