fix: moving annotation zoom from context to callback

--- a/stories/cognite.stories.mdx
+++ b/stories/cognite.stories.mdx
@@ -14,6 +14,7 @@ import {
   SplitContextAndViewer,
   CustomizedAnnotations,
   Playground,
+  ZoomOnSelectedAnnotation,
   BoxAndArrows
 } from './cognite.stories.tsx';
 
@@ -122,6 +123,12 @@ The `draw()` function allows you to define a canvas and draw any shape you like.
 
 <Canvas>
   <Story story={CustomizedAnnotations} />
+</Canvas>
+
+## Programatically zoom on selected annotation
+
+<Canvas>
+  <Story story={ZoomOnSelectedAnnotation} />
 </Canvas>
 
 ## Box and arrows
