refactor: link append

--- a/stories/cognite.stories.mdx
+++ b/stories/cognite.stories.mdx
@@ -15,6 +15,7 @@ import {
   CustomizedAnnotations,
   Playground,
   ZoomOnSelectedAnnotation,
+  AllowLinkClick,
   BoxAndArrows
 } from './cognite.stories.tsx';
 
@@ -176,6 +177,12 @@ You can drag all of the boxes around, but their positions will reset once the co
 
 It is a callback that allows you to access the `offsetX` and `offsetY` for the dragged arrow box, identified by the `annotationId` field. 
 You can store that value somewhere, and then pass it back to the `arrowPreviewOptions.customOffset[annotationId]` if you want to recreate it!
+
+## Allow link click
+
+<Canvas>
+  <Story story={AllowLinkClick} />
+</Canvas>
 
 ## Playground
 
